--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>注音暗語加密解密</title>
+<title>._.加密解密</title>
 <style>
 body { font-family: sans-serif; padding: 20px; }
 textarea { width: 100%; height: 140px; }
@@ -13,9 +13,9 @@ label { font-weight: bold; display:block; margin-bottom:8px; }
 </style>
 </head>
 <body>
-<h2>注音暗語加密 / 解密</h2>
+<h2>._.暗語加密 / 解密</h2>
 
-<label>輸入（加密請輸入注音+聲調，例如：ㄋㄧˇㄏㄠˇ；解密請輸入暗碼，每行一個音節）</label>
+<label>輸入（加密請輸入注音+聲調，例如：ㄋㄧˇㄏㄠˇ；解密請輸入暗碼，每行一個字）</label>
 <textarea id="input"></textarea>
 <br />
 <button onclick="encrypt()">加密 → 暗碼</button>
@@ -24,10 +24,10 @@ label { font-weight: bold; display:block; margin-bottom:8px; }
 
 <script>
 const codeMap = {
-  'ㄅ': '.', 'ㄆ': '..', 'ㄇ': '…', 'ㄈ': '._.', 'ㄉ': '._…', 'ㄊ': '.._..', 'ㄋ': '…_.', 'ㄌ': '._.._.', 'ㄍ': '._._._.',
-  'ㄎ': '. ._.', 'ㄏ': '. .', 'ㄐ': '. ..', 'ㄑ': '. …', 'ㄒ': '. ._.', 'ㄓ': '. ._…', 'ㄔ': '. .._..', 'ㄕ': '. …_.', 'ㄖ': '. ._.._.', 'ㄗ': '. ._._._.',
-  'ㄘ': '.. ._.', 'ㄙ': '.. .', 'ㄧ': '.. ..', 'ㄨ': '.. …', 'ㄩ': '.. ._.', 'ㄚ': '.. ._…', 'ㄛ': '.. .._..', 'ㄜ': '.. …_.', 'ㄝ': '.. ._.._.', 'ㄞ': '.. ._._._.',
-  'ㄟ': '… ._.', 'ㄠ': '... .', 'ㄡ': '... ..', 'ㄢ': '… ...', 'ㄣ': '... ._.', 'ㄤ': '... ._…', 'ㄥ': '... .._..', 'ㄦ': '… …_.'
+  'ㄅ': '.', 'ㄆ': '..', 'ㄇ': '…', 'ㄈ': '….', 'ㄉ': '._…', 'ㄊ': '.._..', 'ㄋ': '…_.', 'ㄌ': '._.._.', 'ㄍ': '._._._.',
+  'ㄎ': '. ._.', 'ㄏ': '. .', 'ㄐ': '. ..', 'ㄑ': '. …', 'ㄒ': '. ….', 'ㄓ': '. ._…', 'ㄔ': '. .._..', 'ㄕ': '. …_.', 'ㄖ': '. ._.._.', 'ㄗ': '. ._._._.',
+  'ㄘ': '.. ._.', 'ㄙ': '.. .', 'ㄧ': '.. ..', 'ㄨ': '.. …', 'ㄩ': '.. ….', 'ㄚ': '.. ._…', 'ㄛ': '.. .._..', 'ㄜ': '.. …_.', 'ㄝ': '.. ._.._.', 'ㄞ': '.. ._._._.',
+  'ㄟ': '… ._.', 'ㄠ': '... .', 'ㄡ': '... ..', 'ㄢ': '… ...', 'ㄣ': '... ….', 'ㄤ': '... ._…', 'ㄥ': '... .._..', 'ㄦ': '… …_.'
 };
 const toneMap = { 'ˉ': '.', 'ˊ': '..', 'ˇ': '…', 'ˋ': '….', '˙': '._…' };
 
@@ -104,3 +104,4 @@ function decrypt(){
 </script>
 </body>
 </html>
+
