--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <div class="grid">
             <div class="card">
                 <h2 class="card-title" id="inputTitle">輸入暗語</h2>
-                <textarea id="inputText" placeholder="輸入"._.",一行一字..."></textarea>
+                <textarea id="inputText" placeholder="輸入&quot._.&quot,一行一字..."></textarea>
                 <div class="button-group">
                     <button class="btn btn-primary" onclick="translateText()">
                         <span>→</span>
@@ -536,3 +536,4 @@
     </script>
 </body>
 </html>
+
